Second commit - table format added to HTML, colour palette added, general layout progress

--- a/index.html
+++ b/index.html
@@ -10,13 +10,52 @@
 
     
 
-    <div class="email-container">
-        <header>
-            <img class="logo" src="#">
-            <p>Haynes Ford of Maidstone</p>
-        </header>
-
-    </div>
-</div>
+<div class="email-container">
+    <table class="header">
+        <tr>
+            <td class="logo"><img src="#"></td>
+            <td class="location"><p>Haynes Ford of Maidstone</p></td>         
+        </tr>
+    </table>
+    <table class="banner">
+        <tr>
+            <td>
+                <img src="#">
+            </td>
+        </tr>
+    </table>
+    <table class="main">
+        <tr>
+            <td class="left-section">
+                <img src="#">
+                <h1>Part Exchange?</h1>
+            </td>
+            <td class="right-section">
+                <img src="#">
+                <h1>FORD Pass</h1>
+            </td>
+        </tr>
+    </table>
+    <table class="ford-pass">
+        <tr>
+            <td><h1>www.fordpass.co.uk</h1></td>
+        </tr>
+        <tr>
+            <td><p>lipsum la la la</p></td>
+        </tr>
+        <tr>
+            <td><img src="#"></td>
+        </tr>
+    </table>
+    <table class="footer">
+        <tr>
+            <td><p>Social media</p></td>
+        </tr>
+        <tr>
+            <td><p>footer info</p></td>
+        </tr>
+    </table>
+    </div> <!--email-container end-->
+</div> <!--email-background end-->
 </body>
 </html>
