Footer background colour added, text #fff, cleaning up code

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             </td>
         </tr>
     </table>
-    <table class="ford-pass">
+    <table class="heritage">
         <tr>
-            <td><h1>www.fordpass.co.uk</h1></td>
+            <td class="ford-pass"><h1>www.fordpass.co.uk</h1></td>
         </tr>
         <tr>
             <td><p>lipsum la la la</p></td>
