--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <tr>
             <td>
                 <img src="#">
+                <h2>Your New FORD vehicle will be ready soon</h2>
             </td>
         </tr>
     </table>
@@ -29,10 +30,39 @@
             <td class="left-section">
                 <img src="#">
                 <h1>Part Exchange?</h1>
+                <p>Please remember to bring with you the folowing:</p>
+                <ul>
+                    <li>Current registration document (V5c)
+                    <br>(IMPORTANT) - By law we cannot accept a
+                    part exchange without a current V5c.</li>
+                    <li>MOT certificate (if applicable)</li>
+                    <li>Service history</li>
+                    <li>All keys</li>
+                    <li>Locking wheel nut key</li>
+                </ul>
+                <p>Your sales executive will complete an online
+                notification to DVLA to advise of the transfer
+                of the part exchange vehicle to us. Please do not
+                contact DVLA yourself prior to bringing in your car
+                to us.</p>
             </td>
             <td class="right-section">
                 <img src="#">
                 <h1>FORD Pass</h1>
+                <p>This fantastic new app assists with the 
+                management of your vehicle, covering areas such as:</p>
+                <ul>
+                    <li>Saving your dealership to your phone for
+                    quicker contact.</li>
+                    <li>Live news and traffic updates</li>
+                    <li>Quick find parking near you</li>
+                    <li>Link with Ford Credit</li>
+                    <li>Service bookings</li>
+                    <li>And many more</li>
+                </ul>
+                <p>If you would like to feel the benefits of
+                    this app, please follow the link below where you
+                    will find more information.</p>
             </td>
         </tr>
     </table>
@@ -41,10 +71,37 @@
             <td class="ford-pass"><h1>www.fordpass.co.uk</h1></td>
         </tr>
         <tr>
-            <td><p>lipsum la la la</p></td>
+            <td><p>Once you have downloaded and followed the steps to
+                create an account, your sales executive can further advise
+                you of the benefits of using this app when your arrive to
+                pick up your new car.</p>
+                <img src="#" alt="our-heritage">
+                <p>Haynes of Maidstone is one of the very few family
+                    companies in the UK that has been in business over
+                    200 years. Therefore, you can be assured that your vehicle
+                    comes with a wealth of history and a multi award winning team
+                    behind it. To celebrate this history, we have produced a 
+                    quality enamel badge to display on your car, which yourself or
+                    one of the team can affix for you.
+                    <br>
+                    <br>
+                    Customers who proudly display this badge on their car will, in return,
+                    receive a 10% discount on any parts or accessories purchased from us.
+                    If this is of interest, please ask your sales executive for more details.
+                    <br>
+                    <br>
+                    See you very soon.
+                    <br>
+                    <br>
+                    <strong>Alex Hercock - Showroom Host</strong>
+                </p>
+            </td>
         </tr>
         <tr>
-            <td><img src="#"></td>
+            <td><img src="#">
+            <h2>Haynes Ford of Maidstone</h2>
+            <h3>23 Ashford Road ME14 5DQ</h3>
+             <p>www.haynesford.co.uk</p></td>
         </tr>
     </table>
     <table class="footer">
@@ -52,7 +109,15 @@
             <td><p>Social media</p></td>
         </tr>
         <tr>
-            <td><p>footer info</p></td>
+            <td><p>Calls may be recorded for training and quality purposes.
+                You are receiving this email because you opted in to receive
+                information from Haynes Ford either via the website, in a showroom or
+                when you purchased your vehicle. If you no longer wish to receive email
+                communications from us please click the link at the top of the email to 
+                unsubscribe instantly. Privacy policy. Our postal address and registered office
+                is Haynes House 23 Ashford Road, Maidstone, Kent, ME145DQ. Registered in England.
+                Our company resgistration number is: 00048511. 25089.
+            </p></td>
         </tr>
     </table>
     </div> <!--email-container end-->
