Layout finished, added padding to each table section and changed font to Helvetica

--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 <div class="email-container">
     <table class="header">
         <tr>
-            <td class="logo"><img src="#"></td>
+            <td class="logo"><img src="#" alt="haynes-logo"></td>
             <td class="location"><p>Haynes Ford of Maidstone</p></td>         
         </tr>
     </table>
     <table class="banner">
         <tr>
             <td>
-                <img src="#">
-                <h2>Your New FORD vehicle will be ready soon</h2>
+                <img src="#" alt="banner">
+                <h1>Your New FORD vehicle will be ready soon</h1>
             </td>
         </tr>
     </table>
     <table class="main">
         <tr>
             <td class="left-section">
-                <img src="#">
-                <h1>Part Exchange?</h1>
+                <img src="#" alt="gear-stick">
+                <h2>Part Exchange?</h2>
                 <p>Please remember to bring with you the folowing:</p>
                 <ul>
                     <li>Current registration document (V5c)
@@ -47,8 +47,8 @@
                 to us.</p>
             </td>
             <td class="right-section">
-                <img src="#">
-                <h1>FORD Pass</h1>
+                <img src="#" alt="ford-car">
+                <h2>FORD Pass</h2>
                 <p>This fantastic new app assists with the 
                 management of your vehicle, covering areas such as:</p>
                 <ul>
@@ -98,9 +98,9 @@
             </td>
         </tr>
         <tr>
-            <td><img src="#">
-            <h2>Haynes Ford of Maidstone</h2>
-            <h3>23 Ashford Road ME14 5DQ</h3>
+            <td><img src="#" alt="showroom">
+            <h1>Haynes Ford of Maidstone</h1>
+            <h2>23 Ashford Road ME14 5DQ</h2>
              <p>www.haynesford.co.uk</p></td>
         </tr>
     </table>
