--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="x-apple-disable-message-reformatting">  
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title></title> 
 
     <style>
@@ -216,7 +216,7 @@
             </td>
         </tr>
     </table>
-</div>
+</div> <!--email-container end-->
 
 <!-- Full Bleed Background Section : BEGIN -->
 <table class="footer">
@@ -243,7 +243,6 @@
         </td>
     </tr>
 </table>
-</div> <!--email-container end-->
 </div> <!--email-background end-->
 </body>
 </html>
