Images added, layout adjusted

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="x-apple-disable-message-reformatting">  
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <title></title> 
 
     <style>
@@ -116,22 +117,27 @@
     <div class="email-container">
         <table class="header">
             <tr>
-                <td class="logo"><img src="#" alt="haynes-logo"></td>
+                <td class="logo"><img src="/haynes.png" alt="haynes-logo"></td>
+                <td class="ford"><img src="/ford.png" alt="ford-logo"></td>
                 <td class="location"><p>Haynes Ford of Maidstone</p></td>         
             </tr>
         </table>
         <table class="banner">
             <tr>
                 <td>
-                    <img src="#" alt="banner">
                     <h1>Your New FORD vehicle will be ready soon</h1>
                 </td>
+            </tr>
+        </table>
+        <table class="divider">
+            <tr>
+                <td><br><br></td>
             </tr>
         </table>
         <table class="main">
             <tr>
                 <td class="left-section">
-                    <img src="#" alt="gear-stick">
+                    <img src="/gear.png" alt="gear-stick" class="gear-img">
                     <h2>Part Exchange?</h2>
                     <p>Please remember to bring with you the following:</p>
                     <ul>
@@ -150,7 +156,8 @@
                     to us.</p>
                 </td>
                 <td class="right-section">
-                    <img src="#" alt="ford-car">
+                    <img src="divider.svg" class="rectangle">
+                    <img src="/car.png" alt="ford-car" class="car-img">
                     <h2>FORD Pass</h2>
                     <p>This fantastic new app assists with the 
                     management of your vehicle, covering areas such as:</p>
@@ -178,7 +185,8 @@
                     create an account, your sales executive can further advise
                     you of the benefits of using this app when your arrive to
                     pick up your new car.</p>
-                    <img src="#" alt="our-heritage">
+                    <img src="/heritage.png" alt="our-heritage">
+                    <h3>Our Heritage</h3>
                     <p>Haynes of Maidstone is one of the very few family
                         companies in the UK that has been in business over
                         200 years. Therefore, you can be assured that your vehicle
@@ -201,13 +209,23 @@
                 </td>
             </tr>
             <tr>
-                <td><img src="#" alt="showroom">
-                <h1>Haynes Ford of Maidstone</h1>
+                <td class="rectangle2"><img src="divider2.svg"></td>
+            </tr>
+            <tr>
+                <td class="showroom">
+                        <h1>Haynes Ford of Maidstone</h1>
                 <h2>23 Ashford Road ME14 5DQ</h2>
                     <p>www.haynesford.co.uk</p>
                 </td>
             </tr>
         </table>
+        <table class="header">
+                <tr>
+                    <td class="logo"><img src="/haynes.png" alt="haynes-logo"></td>
+                    <td class="ford2"><img src="/ford.png" alt="ford-logo"></td>
+                    <td class="location"><p>Haynes Ford of Maidstone</p></td>         
+                </tr>
+            </table>
 
         <!-- Email Footer : BEGIN -->
     <table>
@@ -225,8 +243,16 @@
             <div class="email-container">
                 <table class="footer">
                     <tr>
-                        <td> 
-                            <a href="#">Social media icons</a>
+                        <td>
+                            <ul class="social-icons">
+                                <li><a href="#"><img src="facebook-icon.png"></a></li>
+                                <li><a href="#"><img src="twitter-icon.png"></a></li>
+                                <li><a href="#"><img src="Instagram-icon.png"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
                             <p>Calls may be recorded for training and quality purposes. 
                                 You are receiving this email because you opted in to receive 
                                 information from Haynes Ford either via the website, in a showroom 
@@ -236,6 +262,7 @@
                                 and registered office is Haynes House 23 Ashford Road, Maidstone, 
                                 Kent, ME145DQ. Registered in England. Our company resgistration 
                                 number is: 00048511. 25089.</p>
+                            </td>
                         </td>
                     </tr>
                 </table>
