--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     to us.</p>
                 </td>
                 <td class="right-section">
-                    <img src="divider.svg" class="rectangle">
+                    <img src="/divider.svg" class="rectangle">
                     <img src="/car.png" alt="ford-car" class="car-img">
                     <h2>FORD Pass</h2>
                     <p>This fantastic new app assists with the 
@@ -209,7 +209,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="rectangle2"><img src="divider2.svg"></td>
+                <td class="rectangle2"><img src="/divider2.svg"></td>
             </tr>
             <tr>
                 <td class="showroom">
@@ -245,9 +245,9 @@
                     <tr>
                         <td>
                             <ul class="social-icons">
-                                <li><a href="#"><img src="facebook-icon.png"></a></li>
-                                <li><a href="#"><img src="twitter-icon.png"></a></li>
-                                <li><a href="#"><img src="Instagram-icon.png"></a></li>
+                                <li><a href="#"><img src="/facebook-icon.png"></a></li>
+                                <li><a href="#"><img src="/twitter-icon.png"></a></li>
+                                <li><a href="#"><img src="/Instagram-icon.png"></a></li>
                             </ul>
                         </td>
                     </tr>
