--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
     <div class="email-container">
         <table class="header">
             <tr>
-                <td class="logo"><img src="/haynes.png" alt="haynes-logo"></td>
-                <td class="ford"><img src="/ford.png" alt="ford-logo"></td>
+                <td class="logo"><img src="haynes.png" alt="haynes-logo"></td>
+                <td class="ford"><img src="ford.png" alt="ford-logo"></td>
                 <td class="location"><p>Haynes Ford of Maidstone</p></td>         
             </tr>
         </table>
@@ -137,7 +137,7 @@
         <table class="main">
             <tr>
                 <td class="left-section">
-                    <img src="/gear.png" alt="gear-stick" class="gear-img">
+                    <img src="gear.png" alt="gear-stick" class="gear-img">
                     <h2>Part Exchange?</h2>
                     <p>Please remember to bring with you the following:</p>
                     <ul>
@@ -156,8 +156,8 @@
                     to us.</p>
                 </td>
                 <td class="right-section">
-                    <img src="/divider.svg" class="rectangle">
-                    <img src="/car.png" alt="ford-car" class="car-img">
+                    <img src="divider.svg" class="rectangle">
+                    <img src="car.png" alt="ford-car" class="car-img">
                     <h2>FORD Pass</h2>
                     <p>This fantastic new app assists with the 
                     management of your vehicle, covering areas such as:</p>
@@ -185,7 +185,7 @@
                     create an account, your sales executive can further advise
                     you of the benefits of using this app when your arrive to
                     pick up your new car.</p>
-                    <img src="/heritage.png" alt="our-heritage">
+                    <img src="heritage.png" alt="our-heritage">
                     <h3>Our Heritage</h3>
                     <p>Haynes of Maidstone is one of the very few family
                         companies in the UK that has been in business over
@@ -209,7 +209,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="rectangle2"><img src="/divider2.svg"></td>
+                <td class="rectangle2"><img src="divider2.svg"></td>
             </tr>
             <tr>
                 <td class="showroom">
@@ -221,8 +221,8 @@
         </table>
         <table class="header">
                 <tr>
-                    <td class="logo"><img src="/haynes.png" alt="haynes-logo"></td>
-                    <td class="ford2"><img src="/ford.png" alt="ford-logo"></td>
+                    <td class="logo"><img src="haynes.png" alt="haynes-logo"></td>
+                    <td class="ford2"><img src="ford.png" alt="ford-logo"></td>
                     <td class="location"><p>Haynes Ford of Maidstone</p></td>         
                 </tr>
             </table>
@@ -245,9 +245,9 @@
                     <tr>
                         <td>
                             <ul class="social-icons">
-                                <li><a href="#"><img src="/facebook-icon.png"></a></li>
-                                <li><a href="#"><img src="/twitter-icon.png"></a></li>
-                                <li><a href="#"><img src="/Instagram-icon.png"></a></li>
+                                <li><a href="#"><img src="facebook-icon.png"></a></li>
+                                <li><a href="#"><img src="twitter-icon.png"></a></li>
+                                <li><a href="#"><img src="Instagram-icon.png"></a></li>
                             </ul>
                         </td>
                     </tr>
