--- a/index.html
+++ b/index.html
@@ -121,16 +121,13 @@
             <table class="header">
                 <tr>
                     <td class="logo"><img src="https://i.imgur.com/L9yttSS.png" alt="haynes-logo"></td>
+                        <td class="ford"><img src="https://i.imgur.com/D4gjaaW.png" alt="ford-logo"></td>
                     <td class="location">
                         <p>Haynes Ford of Maidstone</p>
                     </td>
                 </tr>
             </table>
-            <table class="ford-logo">
-                <tr>
-                    <td class="ford"><img src="https://i.imgur.com/D4gjaaW.png" alt="ford-logo"></td>
-                </tr>
-            </table>
+
             <table class="banner">
                 <tr>
                     <td>
@@ -141,8 +138,7 @@
             <table class="divider">
                 <tr>
                     <td>
-                        <br>
-                        <br>
+                        &nbsp;&nbsp;
                     </td>
                 </tr>
             </table>
@@ -163,7 +159,7 @@
                         <p>Your sales executive will complete an online notification to DVLA to advise of the transfer of the part exchange vehicle to us. Please do not contact DVLA yourself prior to bringing in your car to us.</p>
                     </td>
                     <td class="right-section">
-                        <img src="https://i.imgur.com/xDcaZdq.png" alt="ford-car" class="car-img">
+                        <img src="https://i.imgur.com/cJIMqqF.png" alt="ford-car" class="car-img">
                         <h2>FORD Pass</h2>
                         <p>This fantastic new app assists with the management of your vehicle, covering areas such as:</p>
                         <ul>
@@ -208,14 +204,13 @@
                     </td>
                 </tr>
             </table>
-            <table class="ford-logo">
-                <tr>
-                    <td class="ford2"><img src="https://i.imgur.com/D4gjaaW.png" alt="ford-logo"></td>
-                </tr>
-            </table>
+        
             <table class="header">
                 <tr>
                     <td class="logo2"><img src="https://i.imgur.com/L9yttSS.png" alt="haynes-logo"></td>
+                    <td class="ford2">
+                        <img src="https://i.imgur.com/D4gjaaW.png" alt="ford-logo">
+                    </td>
                     <td class="location">
                         <p>Haynes Ford of Maidstone</p>
                     </td>
